NXP-32873: REST server change